# DBproject

./: .gitignore  CMakeLists.txt  README.md
data/test/: re.tbl  te.tbl
data/test_db/: test.tbl
include/: database.h  helper.h  table.h  terminal.h  type.h
src/: database.cpp  helper.cpp  main.cpp  table.cpp  terminal.cpp
test/: .output.txt  create_database.txt  delete.txt  drop_database.txt  drop_table.txt  insert_10k.in  insert_10k_result.txt  output.txt  select_10k_result.txt  status1.ref  test.sh  test_create_database.sh  test_create_table.sh  test_delete.sh  test_drop_database.sh  test_drop_table.sh  test_muti_insert.sh  test_select_from.sh  test_update.sh  update.txt
test/input/: insert_10k.in  select_10k.in
